# orthrus

./: .gitignore  .graphifyignore  Cargo.toml  README.md  deny.toml  manifest
.beads/: metadata.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: logo-brief.md
docs/plans/: dual-headed-gui-test-harness.md
docs/superpowers/plans/: 2026-03-24-orthrus-mvp.md  2026-03-24-phase-1.1-phoenix-feedback.md  2026-03-31-phase2-jitter-hardening.md
docs/superpowers/specs/: 2026-03-23-orthrus-mvp-design.md
src/: harness.rs  lib.rs  visual.rs
tests/: capture_frame_test.rs  counter_tests.rs  visual_tests.rs
