[package]
name = "orthrus"
version = "0.1.0"
edition = "2024"

[features]
kittest = ["dep:egui_kittest", "dep:accesskit"]
visual = ["dep:macroquad", "dep:image"]

[dependencies]
egui = "0.31"

[dependencies.accesskit]
version = "0.17"
optional = true

[dependencies.egui_kittest]
version = "0.31"
optional = true
features = ["wgpu", "snapshot"]

[dependencies.image]
version = "0.24"
optional = true
default-features = false
features = ["png"]

[dependencies.macroquad]
version = "0.4"
optional = true

[[test]]
name = "capture_frame_test"
harness = false
required-features = ["visual"]
