[package]
name = "orthrus"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Dual-headed GUI test harness for macroquad+egui applications"
repository = "https://github.com/jnitsel/orthrus"
keywords = ["testing", "macroquad", "egui", "gui", "visual-regression"]
categories = ["development-tools::testing", "game-development"]
exclude = [
    ".beads/",
    ".claude/",
    ".devcontainer/",
    "AGENTS.md",
    "docs/",
    "session-handoff.md",
]

[features]
kittest = ["dep:egui_kittest", "dep:accesskit"]
visual = ["dep:macroquad", "dep:image"]

[dependencies]
egui = "0.31"

[dependencies.accesskit]
version = "0.17"
optional = true

[dependencies.egui_kittest]
version = "0.31"
optional = true
features = ["wgpu", "snapshot"]

[dependencies.image]
version = "0.25"
optional = true
default-features = false
features = ["png"]

[dependencies.macroquad]
version = "0.4"
optional = true

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]

[[test]]
name = "capture_frame_test"
harness = false
required-features = ["visual"]

[[test]]
name = "counter_tests"
required-features = ["kittest"]
